--- a/epub.html
+++ b/epub.html
@@ -62,20 +62,8 @@
         rendition.next();
     }}, false);
 
-    this.rendition.themes.default({
-      'body': {
-        'color': 'white',
-      }
-    });
-
-     this.rendition.themes.default({
-      'body': {
-        'color': 'black',
-      }
-    });
-
     document.addEventListener("message", function(data) {
-      alert(data)
+      alert(data.data)
       this.rendition.themes.default({
       'body': {
         'color': 'white',
