--- a/epub.html
+++ b/epub.html
@@ -63,7 +63,8 @@
     }}, false);
 
     document.addEventListener("message", function(data) {
-      alert(data.data)
+      alert("1- "data.data)
+      rendition.next();
       this.rendition.themes.default({
       'body': {
         'color': 'white',
