--- a/epub.html
+++ b/epub.html
@@ -63,7 +63,7 @@
     }}, false);
 
     document.addEventListener("message", function(data) {
-      alert("1- "data.data)
+      alert("1- " + data.data)
       rendition.next();
       this.rendition.themes.default({
       'body': {
