--- a/epub.html
+++ b/epub.html
@@ -39,7 +39,7 @@
       snap: true
     });
 
-    rendition.display(currentSectionIndex)
+    rendition.display(5)
 
     rendition.hooks.content.register(function(contents, view) {
 
