--- a/epub.html
+++ b/epub.html
@@ -49,8 +49,8 @@
       items.forEach(function(item){
         item.innerHTML = item.innerText.split(' ').map(l => `<span>${l}</span>`).join(' ');
         item.addEventListener("click", function(e){
-            alert(e.target.innerText)
-            // ReactNativeWebView.postMessage('{"word": "' + e.target.innerText + '"}')
+            alert(e.target.textContent)
+            // ReactNativeWebView.postMessage('{"word": "' + e.target.textContent + '"}')
         })
       });
 
