--- a/epub.html
+++ b/epub.html
@@ -56,6 +56,19 @@
 
     })
 
+    document.addEventListener('DOMContentLoaded', function () {
+      var elements = document.querySelectorAll('p');
+      var items = Array.prototype.slice.call(elements);
+
+      items.forEach(function(item){
+        item.innerHTML = item.innerText.split(' ').map(l => `<span>${l}</span>`).join(' ');
+        item.addEventListener("click", function(e){
+            alert(e.target.textContent)
+            // ReactNativeWebView.postMessage('{"word": "' + e.target.textContent + '"}')
+        })
+      });
+    });
+
     document.addEventListener("keyup", function(e){
       if ((e.keyCode || e.which) == 37) {
         rendition.prev();
