--- a/epub.html
+++ b/epub.html
@@ -48,7 +48,7 @@
 
     var exword ;
 
-    rendition.display(currentSectionIndex)
+    rendition.display(5)
 
     rendition.on("rendered", function(section){
       var elements = document.querySelectorAll('iframe');
