--- a/click.html
+++ b/click.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Title of the document</title>
+</head>
 
+<body>
+<p class="paragraph">click me</p>
+
+<script>
+  var p = querySelector(".paragraph")
+  p.addEventListener("click", function(){
+    alert("Hello!")
+  })
+</script>
+
+</body>
+
+</html>
