--- a/click.html
+++ b/click.html
@@ -8,7 +8,7 @@
 <p class="paragraph">click me</p>
 
 <script>
-  var p = querySelector(".paragraph")
+  var p = document.querySelector(".paragraph")
   p.addEventListener("click", function(){
     alert("Hello!")
   })
